force-app/main/default/objects/Billing_Center_Recalc_Log__c/Billing_Center_Recalc_Log__c.object-meta.xml
<CustomObject>
    <description>Runtime log for retrospective or edge-case recalculation events.</description>
    <label>Billing Center Recalc Log</label>
    <nameField>
        <displayFormat>BCLOG-{00000}</displayFormat>
        <label>Billing Center Recalc Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Recalc Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>