force-app/main/default/objects/Billing_Center_Recalc_Log__c/fields/Impacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Date__c</fullName>
    <label>Impacted Date</label>
    <type>Date</type>
</CustomField>