force-app/main/default/objects/Billing_Center_Recalc_Log__c/fields/Impacted_Quarter_Key__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Quarter_Key__c</fullName>
    <label>Impacted Quarter Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>