force-app/main/default/objects/Billing_Center_Recalc_Log__c/fields/Recalc_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recalc_Reason__c</fullName>
    <label>Recalc Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>